--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
+        "@emotion/react": "^11.13.0",
+        "@emotion/styled": "^11.13.0",
         "@mui/icons-material": "^5.10.9",
-        "@mui/material": "^5.10.12",
+        "@mui/material": "^5.16.6",
         "@mui/x-data-grid": "^5.17.11",
         "@mui/x-date-pickers": "^5.0.19",
         "axios": "^1.1.3",
+        "bcrypt": "^5.1.1",
         "dayjs": "^1.11.7",
         "firebase": "^9.13.0",
         "jquery": "^3.6.1",
